# demo-firewall

./: .gitignore  README.md  cli.py  paloalto_config.txt  pyproject.toml  show-access-rulebase.json  show-hosts.json  show-services.json
demo_firewall/: __init__.py  nb.py
