[tool.poetry]
name = "demo_firewall"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
requests = "*"
pynautobot = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
